# beta2clocks-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  required_CpGs.csv  vite.config.js
.github/workflows/: release.yml
scripts/: build_required_cpgs.R  make-dmg.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: preflight.R
src-tauri/src/: docker.rs  lib.rs  main.rs
test/: make_fixtures.R
