[package]
name = "beta2clocks-app"
version = "0.1.2"
description = "Calculate epigenetic clocks from DNA methylation data (TranslAGE / beta2clocks)."
authors = ["Higgins-Chen Lab"]
edition = "2021"

[lib]
name = "beta2clocks_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
